Fix bug where content overflows past the specified panel height in russian and simplified chinese (#599)

--- a/app/scss/partials/_subscribe.scss
+++ b/app/scss/partials/_subscribe.scss
@@ -14,7 +14,7 @@
 .content-subscription {
 	.badge {
 		display: block;
-		margin: 35px auto 35px auto;
+		margin: 15px auto;
 		width: 137px;
 		height: 97px;
 		background-image: url('/app/images/panel/subscribe-badge.svg');
